--- a/labs/quarkus.adoc
+++ b/labs/quarkus.adoc
@@ -11,9 +11,9 @@ Throughout this lab you’ll discover how Quarkus can make your development of c
 
 ==== Setting up your workspace environment
 
-To get started, open your `crw` project, and open the CodeReady url.
+// To get started, open the CodeReady URL: http://codeready-crw.apps.{{route_url}}[{{route_url}}, window="_blank"]
 
-You may be asked to authorize access. If so, ensure the box to give your user full permissions is checked then select `Allow selected permissions` to continue.
+TIP: You may be asked to authorize access. If so, ensure the box to give your user full permissions is checked then select `Allow selected permissions` to continue.
 
 On the login page, select `Register`. You will have to register a new user before proceeding. Enter the following in the respective fields:
 
@@ -640,4 +640,4 @@ Naviate to the `Overview` tab.
 
 Click the red `Delete` button. When the pop-up appears, tick the checkbox to confirm that you understand your action to delete, and click the final `Delete` button.
 
-Your workspace has been deleted once it disappears from your workspaces. Upon deletion, close the browser CodeReady workspaces browser that you currently have open.
+Your workspace has been deleted once it disappears from your workspaces. Upon deletion, close the browser CodeReady workspaces browser tab that you currently have open.
