--- a/labs/kogito.adoc
+++ b/labs/kogito.adoc
@@ -485,7 +485,7 @@ And now we can access our application using cURL once again in the CodeReady ter
 
 [source]
 ----
-curl -X POST "http://kogito-quickstart-kogito-opentlc.apps.cluster-81ba.81ba.example.opentlc.com/getting_started" -H "accept: application/json" -H "Content-Type: application/json" -d "{}"
+curl -X POST "http://kogito-quickstart-kogito-opentlc.apps.cluster-ROOL_URL.example.opentlc.com/getting_started" -H "accept: application/json" -H "Content-Type: application/json" -d "{}"
 ----
 
 You should again see the id of the process instance just started:
@@ -520,7 +520,7 @@ Now, let's hit the pods with some load:
 
 [source]
 ----
-for i in {1..50} ; do curl -X POST "http://kogito-quickstart-kogito-{{USER_ID}}.apps.cluster-81ba.81ba.example.opentlc.com/getting_started" -H "accept: application/json" -H "Content-Type: application/json" -d "{}" ; sleep .05 ; done
+for i in {1..50} ; do curl -X POST "http://kogito-quickstart-kogito-{{USER_ID}}.apps.cluster-ROOT_URL.example.opentlc.com/getting_started" -H "accept: application/json" -H "Content-Type: application/json" -d "{}" ; sleep .05 ; done
 ----
 
 You will be able to see in your terminal that the 10 instances of our Kogito application being load-balanced and process instances being created:
@@ -548,7 +548,7 @@ Once they are all up and running, try the same load again:
 
 [source]
 ----
-for i in {1..50} ; do curl -X POST "http://kogito-quickstart-kogito-{{USER_ID}}.apps.cluster-81ba.81ba.example.opentlc.com/getting_started" -H "accept: application/json" -H "Content-Type: application/json" -d "{}" ; sleep .05 ; done
+for i in {1..50} ; do curl -X POST "http://kogito-quickstart-kogito-{{USER_ID}}.apps.cluster-ROOT_URL.example.opentlc.com/getting_started" -H "accept: application/json" -H "Content-Type: application/json" -d "{}" ; sleep .05 ; done
 ----
 
 And witness all 50 pods responding evenly to requests. Try doing that with your average app running a container! Pretty cool, huh?
@@ -748,7 +748,7 @@ And now we can access our application using cURL once again:
 
 [source]
 ----
-curl -X POST "http://airmiles-service-kogito-airmiles-{{USER_ID}}.apps.cluster-81ba.81ba.example.opentlc.com/airmiles" -H 'Accept: application/json' -H 'Content-Type: application/json' -d '{ "Status": "GOLD",    "Price": 600}'
+curl -X POST "http://airmiles-service-kogito-airmiles-{{USER_ID}}.apps.cluster-ROOT_URL.example.opentlc.com/airmiles" -H 'Accept: application/json' -H 'Content-Type: application/json' -d '{ "Status": "GOLD",    "Price": 600}'
 ----
 
 You should similar output of the process instance:
@@ -781,7 +781,7 @@ Now that we have 10 pods running, lets hit it with some load:
 
 [source]
 ----
-for i in {1..50} ; do curl -X POST "http://airmiles-service-kogito-airmiles-{{USER_ID}}.apps.cluster-81ba.81ba.example.opentlc.com/airmiles" -H "accept: application/json" -H "Content-Type: application/json"  -d '{ "Status": "GOLD",    "Price": 600}'; sleep .05 ; done
+for i in {1..50} ; do curl -X POST "http://airmiles-service-kogito-airmiles-{{USER_ID}}.apps.cluster-ROOT_URL.example.opentlc.com/airmiles" -H "accept: application/json" -H "Content-Type: application/json"  -d '{ "Status": "GOLD",    "Price": 600}'; sleep .05 ; done
 ----
 
 The 10 Kogito apps are being load-balanced - as you can see in the terminal - as the influx of process instances are created:
